# financeDA_python

./: .gitignore  00_Intro.ipynb  00_intro.py  01_A_PyBase.ipynb  01_A_PyBase.py  02_A_PyDA.ipynb  02_A_PyDA.py  03_B_FinData_Get.ipynb  03_B_FinData_Get.py  04_B_TSA.ipynb  04_B_TSA.py  05_C_FinSata_Base.ipynb  05_C_FinSata_Base.py  06_C_Portfolio.ipynb  06_C_Portfolio.py  07_C_Val.ipynb  07_C_Val.py  08_C_VaR.ipynb  08_C_VaR.py  09_D_ML_Base.ipynb  09_D_ML_Base.py  10_D_Regression.ipynb  10_D_Regression.py  11_D_KNN.ipynb  11_D_KNN.py  12_D_FA.ipynb  12_D_FA.py  PyEnvForWin.md  README.md  README_cn.md  functions_bsm.py  functions_ffreg.py  functions_stock.py  functions_tsa.py  main.py  pyproject.toml  requirements.txt  setup.cfg
OK_FinDA.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data/: F-F_5_Factors_daily_CUFE.csv  WDdata_4g_2025.csv  stockdata_000630sz_20241001-20251031.csv  stockdata_600030SH_2025_ts.csv  stockdata_AAPL_20251111.csv  stockdata_BABA_10d.csv  stockdata_BABA_2.csv  stockdata_BABA_20251111.csv  stockdata_BABA_30d_yf.csv  stockdata_BABA_TSA.csv
financeDA/: __init__.py  class_price_list.py  class_stock_data.py  class_stock_po.py  functions_bsm.py  functions_ffreg.py  functions_single.py  functions_stat.py  functions_val.py  functions_var.py  main.py
ok_finda/: __init__.py  class_price_list.py  class_stock_data.py  functions_ffreg.py  functions_po.py  functions_single.py  functions_stat.py  functions_stock.py  functions_val.py  functions_var.py  main.py
okfinance/: __init__.py  class_price_list.py  class_stock_data.py  class_stock_po.py  main.py  (+5 more)
(+18 files in other folders)
