[project]
name = "0financialdataanalysis"
version = "0.1.0"
description = "金融数据分析(JJYE)"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "numpy==2.3.4",
    "pandas==2.3.3",
    "scipy==1.16.3",
    "pandas-datareader==0.10.0",
    "yfinance==0.2.66",
    "tushare==1.4.24",
    "jqdatasdk==1.9.7",
    "matplotlib==3.10.7",
    "mplfinance==0.12.10b0",
    "scikit-learn==1.7.2",
    "statsmodels==0.14.5",
    "factor-analyzer==0.5.1",
    "jupyter==1.1.1",
    "ipykernel==7.1.0",
    "ipython==9.7.0",
    "pymysql==1.1.2",
    "urllib3==2.5.0",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[tool.uv.pip]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
